--- a/app/src/main/res/values/preferences.xml
+++ b/app/src/main/res/values/preferences.xml
@@ -57,6 +57,7 @@
     <string name="pref_vibrate">vibrate_pattern_identifier</string>
     <string name="pref_delivery_reports">delivery_reports</string>
     <string name="pref_mobile_only">mobile_only</string>
+    <string name="pref_sound_effects">sound_effects</string>
     <string name="pref_seen_convo_nav_tooltip">seen_convo_nav_tooltip</string>
     <string name="pref_snooze">snooze</string>
 
