--- a/app/src/main/res/xml/changelog.xml
+++ b/app/src/main/res/xml/changelog.xml
@@ -18,9 +18,10 @@
 
     <version
         name="1.6.1"
-        description="October 4st, 2016">
+        description="October 4th, 2016">
         <text>Global notification vibration patterns</text>
         <text>Send/received sound option</text>
+        <text>Call button on notification</text>
         <text>Save media in messages with a long click</text>
     </version>
 
