--- a/app/src/main/res/xml/settings.xml
+++ b/app/src/main/res/xml/settings.xml
@@ -42,7 +42,7 @@
         <SwitchPreference
             android:key="@string/pref_sound_effects"
             android:title="@string/sound_effects"
-            android:defaultValue="false" />
+            android:defaultValue="true" />
 
     </PreferenceCategory>
 
