--- a/app/src/main/res/layout/fragment_camera2_basic.xml
+++ b/app/src/main/res/layout/fragment_camera2_basic.xml
@@ -31,6 +31,17 @@
         android:visibility="gone" />
 
     <ImageButton
+        android:layout_width="72dp"
+        android:layout_height="72dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:id="@+id/fullscreen"
+        android:layout_gravity="bottom|start"
+        android:background="?android:attr/selectableItemBackground"
+        android:contentDescription="@string/fullscreen"
+        android:src="@drawable/ic_fullscreen" />
+
+    <ImageButton
         android:id="@+id/picture"
         android:layout_width="72dp"
         android:layout_height="72dp"
