add a media grid activity for when you click the 'view media' in the drawer or the overflow of a conversation

--- a/app/src/main/res/menu/navigation_drawer_messages_group.xml
+++ b/app/src/main/res/menu/navigation_drawer_messages_group.xml
@@ -26,6 +26,11 @@
             android:title="@string/menu_view_contacts" />
 
         <item
+            android:id="@+id/drawer_view_media"
+            android:icon="@drawable/ic_media"
+            android:title="@string/menu_view_media" />
+
+        <item
             android:id="@+id/drawer_delete_conversation"
             android:icon="@drawable/ic_delete"
             android:title="@string/menu_delete_conversation" />
