--- a/app/src/main/res/xml/changelog.xml
+++ b/app/src/main/res/xml/changelog.xml
@@ -20,6 +20,7 @@
         name="1.6.1"
         description="October 4th, 2016">
         <text>Global notification vibration patterns</text>
+        <text>Grid of images when you click the "View Media" button on the message list</text>
         <text>Quick Settings tile to compose new message on Android N</text>
         <text>Send/received sound option</text>
         <text>Call button on notification</text>
