improve navigation view on tablet startup

--- a/app/src/main/res/xml/changelog.xml
+++ b/app/src/main/res/xml/changelog.xml
@@ -30,6 +30,7 @@
         <text>Handle drafts of, and sharing, GIFs, videos, and audio</text>
         <text>Directly dial a number on the message list</text>
         <text>Improvements to marking read on secondary devices</text>
+        <text>Dismiss notifications when the conversation is opened on the web</text>
         <text>UI Improvements</text>
         <text>Bug fixes</text>
         <text>Some crash fixes</text>
