--- a/app/src/main/res/layout/message_received.xml
+++ b/app/src/main/res/layout/message_received.xml
@@ -25,36 +25,44 @@
     android:focusable="true"
     android:background="@drawable/focusable_background">
 
-    <LinearLayout
+    <FrameLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:background="@drawable/message_received_background"
-        android:backgroundTint="@color/colorPrimary"
-        android:maxWidth="@dimen/max_message_width"
-        android:padding="8dp"
-        android:paddingStart="20dp"
-        android:paddingEnd="8dp"
-        android:clickable="true"
-        android:id="@+id/message_holder">
+        android:layout_height="wrap_content">
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:maxHeight="@dimen/max_message_width"
-            android:scaleType="centerInside"
+            android:scaleType="centerCrop"
             android:id="@+id/image"
+            android:background="@drawable/rounded_rect"
+            android:layout_marginStart="10dp"
             android:contentDescription="@string/mms_image" />
 
-        <TextView
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:background="@drawable/message_received_background"
+            android:backgroundTint="@color/colorPrimary"
             android:maxWidth="@dimen/max_message_width"
-            android:textSize="16sp"
-            android:textColor="@android:color/white"
-            android:id="@+id/message" />
+            android:padding="8dp"
+            android:paddingStart="20dp"
+            android:paddingEnd="8dp"
+            android:clickable="true"
+            android:id="@+id/message_holder">
 
-    </LinearLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:maxWidth="@dimen/max_message_width"
+                android:textSize="16sp"
+                android:textColor="@android:color/white"
+                android:id="@+id/message" />
+
+        </LinearLayout>
+
+    </FrameLayout>
 
     <LinearLayout
         android:layout_width="wrap_content"
