--- a/app/src/main/res/values/preferences.xml
+++ b/app/src/main/res/values/preferences.xml
@@ -45,6 +45,7 @@
     <string name="pref_contact_primary_dark_color" translatable="false">contact_primary_dark_color</string>
     <string name="pref_contact_primary_light_color" translatable="false">contact_primary_light_color</string>
     <string name="pref_contact_accent_color" translatable="false">contact_accent_color</string>
+    <string name="pref_contact_led_color" translatable="false">contact_led_color</string>
     <string name="pref_contact_ringtone" translatable="false">contact_ringtone</string>
     <string name="pref_contact_group_name" translatable="false">contact_group_name</string>
     <string name="pref_contact_global_colors_set" translatable="false">global_colors_set</string>
