--- a/app/src/main/res/xml/changelog.xml
+++ b/app/src/main/res/xml/changelog.xml
@@ -18,7 +18,8 @@
 
     <version
         name="1.7.0"
-        description="October 5th, 2016">
+        description="October 6th, 2016">
+        <text>Choose notification LED color per conversation</text>
         <text>Global notification vibration patterns</text>
         <text>Grid of images when you click the "View Media" button on the message list</text>
         <text>Quick Settings tile to compose new message on Android N</text>
