few force closes

--- a/app/src/main/res/xml/changelog.xml
+++ b/app/src/main/res/xml/changelog.xml
@@ -32,6 +32,7 @@
         <text>Directly dial a number on the message list</text>
         <text>Improvements to marking read on secondary devices</text>
         <text>Dismiss notifications when the conversation is opened on the web</text>
+        <text>So many other little things</text>
         <text>UI Improvements</text>
         <text>Bug fixes</text>
         <text>Some crash fixes</text>
