reencode video, add a play button to the media finder to designate video, and cleanup code

--- a/app/src/main/res/layout/item_attach_image.xml
+++ b/app/src/main/res/layout/item_attach_image.xml
@@ -28,4 +28,13 @@
         android:contentDescription="@null"
         android:clickable="true" />
 
+    <ImageView
+        app:layout_widthPercent="40%"
+        app:layout_aspectRatio="40%"
+        android:layout_gravity="center"
+        android:id="@+id/play_button"
+        android:src="@drawable/ic_play"
+        android:padding="2dp"
+        android:visibility="gone" />
+
 </android.support.percent.PercentFrameLayout>
