--- a/app/src/main/res/xml/changelog.xml
+++ b/app/src/main/res/xml/changelog.xml
@@ -15,6 +15,12 @@
   -->
 
 <changelog>
+    <version
+        name="1.7.1"
+        description="October 8th, 2016">
+        <text>Attach videos captured outside the app</text>
+        <text>Improve UI for snooze</text>
+    </version>
 
     <version
         name="1.7.0"
