--- a/api_implementation/src/main/res/values/account_values.xml
+++ b/api_implementation/src/main/res/values/account_values.xml
@@ -6,6 +6,8 @@
     <string name="api_pref_salt" translatable="false">salt</string>
     <string name="api_pref_passhash" translatable="false">passhash</string>
     <string name="api_pref_primary" translatable="false">primary</string>
+    <string name="api_pref_subscription_type" translatable="false">subscription_type</string>
+    <string name="api_pref_subscription_expiration" translatable="false">subscription_expiration</string>
     <string name="api_pref_device_id" translatable="false">device_id</string>
     <string name="api_pref_key" translatable="false">key</string>
 </resources>
