--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -36,4 +36,10 @@
     <dimen name="header_height">184dp</dimen>
     <dimen name="header_image_top_margin">24dp</dimen>
 
+    <!-- Samsung Multi-window Support -->
+    <dimen name="multiwindow_defaultsize_w">632.0dip</dimen>
+    <dimen name="multiwindow_defaultsize_h">598.0dip</dimen>
+    <dimen name="multiwindow_minimumsize_w">632.0dip</dimen>
+    <dimen name="multiwindow_minimumsize_h">598.0dip</dimen>
+
 </resources>
