--- a/app/src/main/res/xml/settings.xml
+++ b/app/src/main/res/xml/settings.xml
@@ -67,4 +67,14 @@
 
     </PreferenceCategory>
 
+    <PreferenceCategory android:title="@string/advanced">
+
+        <SwitchPreference
+            android:key="@string/pref_convert_to_mms"
+            android:title="@string/send_as_mms"
+            android:summary="@string/send_as_mms_summary"
+            android:defaultValue="true" />
+
+    </PreferenceCategory>
+
 </PreferenceScreen>
