--- a/app/src/main/res/xml/changelog.xml
+++ b/app/src/main/res/xml/changelog.xml
@@ -22,6 +22,7 @@
         <text>Onboaring activity for new users</text>
         <text>Improvements to scaling images for MMS</text>
         <text>Option to convert long SMS to MMS</text>
+        <text>MMS changes (improvements?)</text>
         <text>Bug/crash fixes</text>
     </version>
 
