--- a/app/src/main/res/xml/changelog.xml
+++ b/app/src/main/res/xml/changelog.xml
@@ -17,6 +17,12 @@
 <changelog>
 
     <version
+        name="1.7.3"
+        description="October ?th, 2016">
+        <text>Chrome Custom Tab support</text>
+    </version>
+
+    <version
         name="1.7.2"
         description="October 12th, 2016">
         <text>Onboaring activity for new users</text>
