--- a/app/src/main/res/layout/fragment_message_list.xml
+++ b/app/src/main/res/layout/fragment_message_list.xml
@@ -143,7 +143,7 @@
 
             </RelativeLayout>
 
-            <EditText
+            <xyz.klinker.messenger.view.ImageKeyboardEditText
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:minHeight="40dp"
