--- a/app/src/main/res/menu-sw600dp/fragment_messages.xml
+++ b/app/src/main/res/menu-sw600dp/fragment_messages.xml
@@ -22,7 +22,7 @@
         android:id="@+id/menu_view_contact"
         android:icon="@drawable/ic_contacts"
         android:title="@string/menu_view_contact"
-        app:showAsAction="always" />
+        app:showAsAction="ifRoom" />
 
     <item
         android:id="@+id/menu_view_media"
