--- a/app/src/main/res/xml/changelog.xml
+++ b/app/src/main/res/xml/changelog.xml
@@ -20,8 +20,9 @@
         name="1.7.5"
         description="October 21st, 2016">
         <text>Various improvements to photo syncing across devices (especially GIFs)</text>
-        <text></text>
+        <text>Tons more random fixes and tweaks</text>
     </version>
+
     <version
         name="1.7.4"
         description="October 18th, 2016">
