use black text on received message bubbles that are distinctly light colored

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -117,4 +117,6 @@
     <color name="emptyTextSecondary">#B2FFFFFF</color>
     <color name="deleteIcon">@android:color/white</color>
 
+    <color name="darkText">#E2000000</color>
+
 </resources>
