apply the text color change to group messages too

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -118,5 +118,6 @@
     <color name="deleteIcon">@android:color/white</color>
 
     <color name="darkText">#E2000000</color>
+    <color name="lightText">#FFFFFFFF</color>
 
 </resources>
