--- a/app/src/main/res/layout/activity_notification_reply.xml
+++ b/app/src/main/res/layout/activity_notification_reply.xml
@@ -31,7 +31,7 @@
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/background"
+                android:background="@color/quickReplyBackground"
                 android:paddingStart="12dp"
                 android:paddingEnd="12dp"
                 android:paddingTop="12dp"
@@ -47,7 +47,7 @@
                 android:paddingStart="12dp"
                 android:paddingEnd="12dp"
                 android:paddingBottom="8dp"
-                android:background="@color/background"
+                android:background="@color/quickReplyBackground"
                 android:elevation="8dp">
 
                 <TextView
