add ripple feedback to fab and fix the tests

--- a/app/src/main/res/layout/activity_messenger.xml
+++ b/app/src/main/res/layout/activity_messenger.xml
@@ -84,6 +84,7 @@
             app:elevation="6dp"
             app:pressedTranslationZ="12dp"
             app:fabSize="normal"
+            app:rippleColor="@android:color/white"
             app:borderWidth="0dp" />
 
         <FrameLayout
