--- a/app/src/main/res/layout/fragment_message_list.xml
+++ b/app/src/main/res/layout/fragment_message_list.xml
@@ -170,6 +170,7 @@
                 android:contentDescription="@string/send_message"
                 app:elevation="0dp"
                 app:fabSize="mini"
+                app:rippleColor="@android:color/white"
                 android:layout_gravity="center_vertical" />
 
         </LinearLayout>
