make the blacklist recycler view style match the conversation list one

--- a/api_implementation/src/main/res/layout/api_activity_login.xml
+++ b/api_implementation/src/main/res/layout/api_activity_login.xml
@@ -140,6 +140,7 @@
             android:contentDescription="@string/api_continue"
             app:fabSize="normal"
             app:borderWidth="0dp"
+            app:rippleColor="@android:color/white"
             app:backgroundTint="@color/api_fab_background" />
 
     </RelativeLayout>
