--- a/app/src/main/res/layout/fragment_schedule_messages.xml
+++ b/app/src/main/res/layout/fragment_schedule_messages.xml
@@ -77,6 +77,7 @@
         android:layout_margin="@dimen/fab_margin"
         app:elevation="6dp"
         app:pressedTranslationZ="12dp"
+        app:rippleColor="@android:color/white"
         app:fabSize="normal"
         app:borderWidth="0dp" />
 
