--- a/app/src/main/res/layout/item_blacklist.xml
+++ b/app/src/main/res/layout/item_blacklist.xml
@@ -17,7 +17,10 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/quickReplyBackground"
+    android:layout_marginStart="@dimen/conversation_list_padding"
+    android:layout_marginEnd="@dimen/conversation_list_padding"
+    android:background="@drawable/conversation_list_item_background"
+    android:elevation="2dp"
     android:clickable="true" >
 
     <TextView
