--- a/app/src/main/res/xml/changelog.xml
+++ b/app/src/main/res/xml/changelog.xml
@@ -20,7 +20,10 @@
         name="1.8.0"
         description="October 25th, 2016">
         <text>Dual SIM Support: select which SIM to use for a conversation from that conversation's settings</text>
+        <text>Homescreen icon-badge support for various launchers</text>
         <text>Improve theme for quick reply in Android 6.0 and below</text>
+        <text>Various UI tweaks and improvements</text>
+        <text>Bug and crash fixes</text>
     </version>
 
     <version
