--- a/app/src/main/res/xml/changelog.xml
+++ b/app/src/main/res/xml/changelog.xml
@@ -19,6 +19,7 @@
     <version
         name="1.8.3"
         description="October 30th, 2016">
+        <text>Subscriptions activated, thanks for helping with the beta test :)</text>
         <text>Update contact images</text>
         <text>Improve sharing location</text>
         <text>More bug fixes</text>
